--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -373,65 +373,6 @@ body {
 }
 /* BACK TO TOP END */
 
-/* CONTACT START */
-.contact {
-    height: 35vh;
-    padding: 20px 0;
-    position: relative;
-    background-color: var(--backgroundColor);
-    border-top: 1px solid var(--borderColor);
-    border-bottom: 1px solid var(--borderColor);
-    margin-bottom: 400px;
-    transition: 1s all;
-}
-
-.contact-scale {
-    border: 1px solid var(--borderColor);
-    transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    -webkit-transform: scale(0.9);
-    transition: 1.5s all;
-    top: -50px;
-}
-
-.contact-normal {
-    transform: scale(1);
-    -ms-transform: scale(1);
-    -webkit-transform: scale(1);
-    transition: 1s all;
-}
-
-.contact .social-icons {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 0;
-}
-
-.social-icons li {
-    position: relative;
-    margin: 0 45px;
-}
-
-.social-icons .social-icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    font-size: 48px;
-    transition: 0.5s all;
-    color: var(--fontColor);
-    cursor: pointer;
-}
-
-.social-icons .social-icon:hover {
-    color: var(--iconColor);
-    transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -webkit-transform: scale(1.3);
-    transition: 0.5s all;
-}
-/* CONTACT END */
-
 /* FOOTER START */
 .footer {
     height: 70vh;
@@ -1726,6 +1667,69 @@ body {
     opacity: 0.9;
 }
 /* AUTHORS END */
+
+/* CONTACT START */
+.contact-section {
+    height: 35vh;
+    padding: 20px 0;
+    position: relative;
+    background-color: var(--backgroundColor);
+    border-top: 1px solid var(--borderColor);
+    border-bottom: 1px solid var(--borderColor);
+    margin-bottom: 400px;
+    transition: 1s all;
+}
+
+.contact-scale {
+    border: 1px solid var(--borderColor);
+    transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    -webkit-transform: scale(0.9);
+    transition: 1.5s all;
+    top: -50px;
+}
+
+.contact-normal {
+    transform: scale(1);
+    -ms-transform: scale(1);
+    -webkit-transform: scale(1);
+    transition: 1s all;
+}
+
+.contact-section .title-heading-wrapper {
+    margin-top: 45px;
+}
+
+.contact-section .social-icons {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+}
+
+.social-icons li {
+    position: relative;
+    margin: 0 45px;
+}
+
+.social-icons .social-icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 48px;
+    transition: 0.5s all;
+    color: var(--fontColor);
+    cursor: pointer;
+}
+
+.social-icons .social-icon:hover {
+    color: var(--iconColor);
+    transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    transition: 0.5s all;
+}
+/* CONTACT END */
 /* ------ HOME ROUTE END ------ */
 
 /* ANIMATIONS START */
